--- a/step_1.html
+++ b/step_1.html
@@ -5,11 +5,14 @@
 <head>
 	<title>Time-In: Step 1</title>
 	<link rel="stylesheet" type="text/css" href="time_in.css"> 
+    <link rel="stylesheet" type="text/css" href="step_1.css"> 
 </head>
 <body>
 	 <p class="step_txt"> STEP 1: </p>
 	 <h1> Chill Out </h1>
 	 <h5> Close your eyes.  Focus on your breathing.  Relax. </h5>
 	 <a class="next_btn" href="step_2.html">NEXT</a>
+    
+    <h1>Big Change.</h1>
 </body>
 </html>
