--- a/step_1.html
+++ b/step_1.html
@@ -11,5 +11,6 @@
 	 <h1> Chill Out </h1>
 	 <h5> Close your eyes.  Focus on your breathing.  Relax. </h5>
 	 <a class="next_btn" href="step_2.html">NEXT</a>
+	 <p>TEST</p>
 </body>
 </html>
