Added new icons and working on step 3 (scroll page).

--- a/start.html
+++ b/start.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="time_in.css"> 
 </head>
 <body>
-	
+	 <img id="chair_img" src="chair.png"></img>
 	 <a id="start_btn" href="step_1.html">START</a>
 </body>
 </html>
