--- a/step_1.html
+++ b/step_1.html
@@ -24,19 +24,19 @@
                     <a href="start.html"><img class="arrow center-block" src="images/arrow-left.png"/></a>
                 </div>
                 <div class="col-md-1 lit">
-                    <img class="icon green" src="images/check.png"/>
+                    <img class="icon green" src="images/relax.png"/>
                 </div>
                 <div class="col-md-1">
-                    <img class="icon orange" src="images/character.png"/>
+                    <img class="icon orange" src="images/check.png"/>
                 </div>
                 <div class="col-md-1">
-                    <img class="icon purple" src="images/growth.png"/>
+                    <img class="icon purple" src="images/character.png"/>
                 </div>
                 <div class="col-md-1">
-                    <img class="icon blue" src="images/journal.png"/>
+                    <img class="icon blue" src="images/strong.png"/>
                 </div>
                 <div class="col-md-1">
-                    <img class="icon pink" src="images/strong.png"/>
+                    <img class="icon pink" src="images/learn.png"/>
                 </div>
                 <div class="col-md-1">
                     <img class="icon darkpink" src="images/done.png"/>
@@ -51,7 +51,7 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <p class="title motto">Chill Out</p>
+                    <p class="title motto green-text">Chill Out</p>
                     <p class="desc">Breathe, breathe, breathe, breathe, breathe, breathe.</p>
                 </div>
                 <div class="col-md-2"></div>
