--- a/step_2.html
+++ b/step_2.html
@@ -17,47 +17,56 @@
     <body>
         <!-- Navigation Bar -->
         <div class="row strip">
-            <div class="col-md-2"></div>
-            <div class="col-md-1">
-                <a href="step_1.html"><img class="arrow center-block" src="images/arrow-left.png"/></a>
+                <div class="col-md-2"></div>
+                <div class="col-md-1">
+                    <a href="step_1.html"><img class="arrow center-block" src="images/arrow-left.png"/></a>
+                </div>
+                <div class="col-md-1">
+                    <img class="icon green" src="images/relax.png"/>
+                </div>
+                <div class="col-md-1 lit">
+                    <img class="icon orange" src="images/check.png"/>
+                </div>
+                <div class="col-md-1">
+                    <img class="icon purple" src="images/character.png"/>
+                </div>
+                <div class="col-md-1">
+                    <img class="icon blue" src="images/strong.png"/>
+                </div>
+                <div class="col-md-1">
+                    <img class="icon pink" src="images/learn.png"/>
+                </div>
+                <div class="col-md-1">
+                    <img class="icon darkpink" src="images/done.png"/>
+                </div>
+                <div class="col-md-1">
+                    <a href="step_3.1.html"><img class="arrow center-block" src="images/arrow-right.png"/></a>
+                </div>
+                <div class="col-md-2"></div>
             </div>
-            <div class="col-md-1">
-                <img class="icon green" src="images/check.png"/>
-            </div>
-            <div class="col-md-1 lit">
-                <img class="icon orange" src="images/character.png"/>
-            </div>
-            <div class="col-md-1">
-                <img class="icon purple" src="images/growth.png"/>
-            </div>
-            <div class="col-md-1">
-                <img class="icon blue" src="images/journal.png"/>
-            </div>
-            <div class="col-md-1">
-                <img class="icon pink" src="images/strong.png"/>
-            </div>
-            <div class="col-md-1">
-                <img class="icon darkpink" src="images/done.png"/>
-            </div>
-            <div class="col-md-1">
-                <a href="step_3.html"><img class="arrow center-block" src="images/arrow-right.png"/></a>
-            </div>
-            <div class="col-md-2"></div>
-        </div>
         
         
         <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <p class="title motto">Check In</p>
+                    <p class="title motto orange-text">Check In</p>
                     <p class="desc">You are sitting in the recovery chair, which means you were disruptive in class. Now, you need to take responsibility.</p>
                 </div>
                 <div class="col-md-2"></div>
         </div>
+        <div class="row filler"></div>
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-                <p class="prompt">Hello my name is: <input class="textbox"></input></p></div>
+                <p class="prompt">Hello my name is <input class="textbox"></input></p>
+                <p class="prompt inline">I am here because</p>
+                <select class="rounded">
+                    <option class="drop" value="spoke">I spoke when I was supposed to be quiet.</option>
+                    <option class="drop" value="language">I used inappropriate language.</option>
+                    <option class="drop" value="mean">I was mean to a classmate.</option>
+                    <option class="drop" value="disruptive">I was disruptive to the class.</option>
+                </select>
+            </div>
             <div class="col-md-3"></div>
         </div>
     </body>
